Small font color fix for navigate-by panel.

--- a/style.css
+++ b/style.css
@@ -985,7 +985,7 @@ span.score {
 
 .res-nightmode #progressIndicator p, .res-nightmode #header-img, .res-nightmode #header #header-bottom-right a:hover, .res-nightmode .usertext-body .md, 
     .res-nightmode #remember-me label, .res-nightmode #header #header-bottom-left .tabmenu li a, .res-nightmode .title, .res-nightmode .menuarea a, 
-    #REScommentNavToggle div, .res-nightmode .side .subscribe-button a, .res-nightmode input[type="submit"] {
+    .res-nightmode #REScommentNavToggle div, .res-nightmode .side .subscribe-button a, .res-nightmode input[type="submit"] {
     color: white !important;
 }
 
