Fixed hover-highlighting background of the buttons below comments (permalink, source, etc) on alternate posts (the entire button row was being highlighted on hover)

--- a/style.css
+++ b/style.css
@@ -680,6 +680,10 @@ input[type="hidden"], .drop-choices a.choice.selected, body.res-nightmode .menua
     margin-left: 5px !important;
 }
 
+.commentarea .flat-list.buttons:hover {
+    background: transparent !important;
+}
+
 .commentarea div.collapsed, .commentarea div.collapsed a.expand { /* keep div as part of selector */
     font-size: 11px !important;
     font-style: italic !important;
