Removed Secret Santa link in the top bar.

--- a/style.css
+++ b/style.css
@@ -82,7 +82,8 @@ div.footer-parent, /* entire footer */
 #BigEditor h3, /* title for RES big editor for messages */
 .bottommenu.debuginfo, /* pi debug info */
 #progressIndicator img, /* NER next-page-is-loading indicator, colors do not match with theme */
-.promoted, .promotedlink /* promoted entry / ad at the top of page listings */    
+.promoted, .promotedlink, /* promoted entry / ad at the top of page listings */    
+.hohoho-header /*link in top bar to secret santa */
 {    
   display: none !important;
 }
