--- a/style.css
+++ b/style.css
@@ -83,7 +83,8 @@ div.footer-parent, /* entire footer */
 .bottommenu.debuginfo, /* pi debug info */
 #progressIndicator img, /* NER next-page-is-loading indicator, colors do not match with theme */
 .promoted, .promotedlink, /* promoted entry / ad at the top of page listings */    
-.hohoho-header /*link in top bar to secret santa */
+.hohoho-header, /*link in top bar to secret santa */
+.sidebox.hohoho .morelink /* sidebar link to secret santa */
 {    
   display: none !important;
 }
