--- a/style.css
+++ b/style.css
@@ -83,10 +83,11 @@ div.footer-parent, 				/* entire footer */
 .bottommenu.debuginfo, 			/* pi debug info */
 #progressIndicator img, 		/* NER next-page-is-loading indicator, colors do not match with theme */
 .promoted, .promotedlink, 		/* promoted entry / ad at the top of page listings */    
-.hohoho-header, 				/*link in top bar to secret santa */
+.hohoho-header, 				/* link in top bar to secret santa */
 .sidebox.hohoho .morelink, 		/* sidebar link to secret santa */
 .sidebox.holiday_shopping, 		/* sidebar link to marketplace */
-.debuginfo						/* info on server that rendered	the page */			
+.debuginfo,						/* info on server that rendered	the page */		
+.searchpane-toggle-hide			/* link to hide search box on search page */	
 {    
   display: none !important;
 }
