--- a/style.css
+++ b/style.css
@@ -217,13 +217,18 @@ div.footer-parent, 				/* entire footer */
 }
 
 .linkinfo {
-	padding: 6px 6px 0px 6px !important;
+	padding: 0px !important;
+	width: 98% !important;
     border: none !important;
     background-color: whiteSmoke !important;
     border: 1px solid #ddd !important;
     font-family: inherit !important;
     font-style: italic !important;
     line-height: 1.5em !important;
+}
+
+.linkinfo .date, .linkinfo .score, .linkinfo .totalvotes{
+    padding: 6px !important;
 }
 
 .linkinfo .date span {
