--- a/style.css
+++ b/style.css
@@ -467,6 +467,13 @@
 	    padding-top: 3px !important;
 	}
 	
+	.usertext-body hr {
+		height: 1px !important;
+		padding: 0px !important;
+		margin-top: 15px !important;
+		margin-bottom: 15px !important;
+	}
+	
 	.usertext-body td {
 	    padding: 7px !important;
 	    vertical-align: top !important;
